--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -64,11 +64,62 @@ li {
   padding-top: 0px;
 }
 
+.info {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.evenPage {
+  background-color: #FFF;
+  left: 0;
+  right: 0;
+}
+
+.oddPage {
+  background-color: #f2f2f2;
+  left: 0;
+  right: 0;
+}
+
+#page0 {
+  margin-top: 70px;
+  height: auto;
+}
+
+#page1 {
+  height: auto;
+  padding-bottom: 30px;
+}
+
+#page2 {
+  height: auto;
+  padding-bottom: 50px;;
+}
+
+#page3 {
+  height: auto;
+  padding-bottom: 100px;
+}
+
 #selfie {
   border-radius: 3px;
   box-shadow: 5px 5px 5px #888888;
 }
 
+.viewLink {
+  border: solid;
+  border-width: 3px;
+  color: #FFF;
+  background-color: #4C4D57;
+  border-color: #4C4D57;
+  position: relative;
+  bottom: 0;
+}
+
+.viewLink:hover {
+  background-color: #FFF;
+  color: #4C4D57;
+}
 
 .projectImg {
   height: 150px;
@@ -79,13 +130,72 @@ li {
   border-color: #C0C0C0;
 }
 
+#aGithub {
+  border-color: #2d2d2d;
+  color: #2d2d2d;
+}
+
+#aGithub:hover {
+  color: #f2f2f2;
+  background-color: #2d2d2d;
+}
+
+#aTwitter {
+  border-color: #4099FF;
+  color: #4099FF;
+}
+
+#aTwitter:hover {
+  color: #f2f2f2;
+  background-color: #4099FF;
+}
+
+#aCV {
+  border-color: #C0C0C0;
+  color: #C0C0C0;
+}
+
+#aCV:hover {
+  color: #f2f2f2;
+  background-color: #C0C0C0
+}
+
+#aLinkedIn {
+  border-color: #0077B5;
+  color: #0077B5;
+}
+
+#aLinkedIn:hover {
+  color: #f2f2f2;
+  background-color: #0077B5;
+}
+
+#aEmail {
+  border-color: #dd4b39;
+  color: #dd4b39;
+}
+
+#aEmail:hover {
+  color: #f2f2f2;
+  background-color: #dd4b39;
+}
+
+.contactLinks {
+  font-size: 30px;
+  border: solid;
+  border-width: 5px;
+  background-color: #f2f2f2;
+}
+
+#contactLinksDiv {
+  padding-top: 30px;
+}
 
 #footnote {
   font-size: 8px;
   color: #C0C0C0;
   background-color: #f2f2f2;
 }
-
 
 
 @media only screen and (max-width: 480px) {
