--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -8,6 +8,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
+  margin: 0;
 }
 
 a {
@@ -77,6 +78,7 @@ li {
 
 .oddPage {
   background-color: #f2f2f2;
+  margin: 0;
   left: 0;
   right: 0;
 }
@@ -188,6 +190,7 @@ li {
 }
 
 #contactLinksDiv {
+  word-spacing: 20px;
   padding-top: 30px;
 }
 
