--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -103,6 +103,11 @@ li {
   padding-bottom: 100px;
 }
 
+#aboutText {
+  font-size: 24px;
+  text-align: left;
+}
+
 #selfie {
   border-radius: 3px;
   box-shadow: 5px 5px 5px #888888;
