Added Blog to contact section and replaced images with text

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
 }
 
 a {
+  color: inherit;
   text-decoration: none;
 }
 
@@ -177,55 +178,47 @@ a {
     }
 /* Projects End */
 
+#about {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 24px;
+  margin: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+
 #contact {
   display: -webkit-flex;
   display: flex;
+  font-size: 20px;
   height: 400px;
   text-align: center;
 }
-
-.contact-button {
-  margin: 40px;
-  text-align: center;
-}
-
-.contact-img {
-  width: 100%;
-}
-
-#github {
-  background: #000;
-}
-  #github:hover {
-    background: #99cc99;
+  #contact-left {
+    align: left;
+    flex: 1;
+    margin: 40px;
   }
-#twitter {
-  background: #4099FF;
-}
-  #twitter:hover {
-    background: #99cc99;
+  #contact-right {
+    align: right;
+    flex: 1;
+    margin: 40px;
   }
-
-#linkedin {
-  background: #0077B5;
-}
-  #linkedin:hover {
-    background: #99cc99;
+  .contact-header {
+    border-bottom: solid;
+    border-color: #99cc99;
+    border-radius: 2px;
+    border-width: 4px;
+    font-size: 30px;
+    margin: 0 auto;
+    width: 140px;
   }
-
-#gmail {
-  background: #dd4b39;
-}
-  #gmail:hover {
-    background: #99cc99;
+  .contact-link {
+    font-size: 30px;
   }
-
-#cv {
-  background: #C0C0C0;
-}
-  #cv:hover {
-    background: #99cc99;
-  }
+    .contact-link:hover {
+      color: #99cc99;
+    }
 
 @media screen and (max-width: 720px) {
   #contact {
