--- a/style.css
+++ b/style.css
@@ -176,6 +176,31 @@ a {
       height: 30%;
       margin: 40px;
     }
+
+
+#chromebooks {
+  background: #fff;
+  padding-top: 40px;
+  padding-bottom: 120px;
+  text-align: center;
+}
+  #chromebooks-title {
+    margin: 40px auto;
+    width: 520px;
+  }
+  #chromebooks-content {
+    font-family: 'Montserrat', sans-serif;
+    width: 100%; 
+  }
+  #chromebooks-about {
+    font-size: 24px;
+    margin: 40px;
+    height: 70%;
+  }
+  #chromebooks-buttons {
+    height: 30%;
+    margin: 40px;
+  }
 /* Projects End */
 
 #about {
