Adding fadein animations for content. jQuery added

--- a/style.css
+++ b/style.css
@@ -29,6 +29,14 @@ a {
   text-align: center;
 }
 
+.fadein {
+  opacity: 0;
+}
+
+.project-title {
+  opacity: 0;
+}
+
 .button {
   border: solid;
   border-color: #99cc99;
