--- a/style.css
+++ b/style.css
@@ -17,12 +17,12 @@ a {
 }
 
 .green-words {
-  color: #99cc99
+  color: #5BA75B
 }
 
 .banner {
-  background: #99cc99;
-  color: #fff;
+  background: #5BA75B;
+  color: #121212;
   font-size: 20px;
   margin: 0;
   padding: 2px;
@@ -31,10 +31,10 @@ a {
 
 .button {
   border: solid;
-  border-color: #99cc99;
+  border-color: #5BA75B;
   border-radius: 2px;
   border-width: 4px;
-  background: #99cc99;
+  background: #5BA75B;
   bottom: 0;
   color: #fff;
   font-family: 'Montserrat', sans-serif;
@@ -46,12 +46,15 @@ a {
 }
   .button:hover {
     background: url(images/transparentbg.png);
-    color: #99cc99;
+    color: #5BA75B;
     cursor: hand;
   }
 
 
 #intro {
+  background: url(images/grass.jpeg) no-repeat center;
+  background-size: cover;
+  color: #ccc;
   padding: 80px;
   text-align: center;
 }
@@ -65,13 +68,14 @@ a {
 
 /* Projects */
 .project {
+  color: #ccc;
   padding-top: 40px;
-  padding-bottom: 120px;
+  padding-bottom: 80px;
   text-align: center;
 }
   .project-title {
       border-bottom: solid;
-      border-color: #99cc99;
+      border-color: #5BA75B;
       border-width: 4px;
       margin: 0 auto;
       margin-top: 40px;
@@ -81,6 +85,7 @@ a {
       .project-title h1{
         font-size: 60px;
         margin: 0;
+        text-shadow: 0px 1px 5px rgba(0, 0, 0, 1);
       } 
   .project-content {
     font-family: 'Montserrat', sans-serif;
@@ -89,17 +94,22 @@ a {
     .project-about { 
       font-size: 24px;
       height: 70%;
-      margin: 40px;
-      padding-left: 200px;
-      padding-right: 200px;
     }
+      .project-about p {
+        max-width: 40em;
+        padding: 10px;
+        text-shadow: 0px 1px 5px rgba(0, 0, 0, 1);
+        margin: 0 auto;
+      }
     .project-buttons {
       height: 30%; 
+      margin: 20px;
     }
 
 
 #ushare {
-  background: url(images/background-ushare.png);
+  background: url(images/mapbackground.jpeg) no-repeat;
+  background-size: cover;
 }
   #ushare-title {
     margin: 40px auto;
@@ -107,7 +117,8 @@ a {
   }
 
 #showstar {
-  background: url(images/background-showstar.png);
+  background: url(images/party.jpeg) no-repeat center;
+  background-size: cover;
 }
   #showstar-title {
     margin: 40px auto;
@@ -124,11 +135,19 @@ a {
   }
   
 #brooklyn {
-  background: url(images/background-brooklyn.png);
+  background: url(images/brooklyn.jpeg) no-repeat center;
+  background-size: cover;
+  box-shadow: inset 0 0 10em #111;
 }
   #brooklyn-title {
     margin: 40px auto;
     width: 530px;
+  }
+  #brooklyn-title h1 {
+    text-shadow: none;
+  }
+  #brooklyn-about p {
+    text-shadow: none;
   }
 
 #chromebooks {
@@ -142,10 +161,11 @@ a {
 /* Projects End */
 
 #about {
+  background: #121212;
+  color: #ccc;
   font-family: 'Montserrat', sans-serif;
   font-size: 24px;
-  margin: 40px;
-  padding: 150px;
+  padding: 220px;
   padding-top: 40px;
   padding-bottom: 40px;
   text-align: center;
@@ -154,7 +174,7 @@ a {
     border: none;
     border-radius: 2px;
     background: #99c999;
-    color: #99cc99;
+    color: #5BA75B;
     height: 4px;
     width: 100px;
   }
@@ -182,7 +202,7 @@ a {
   }
   .contact-header {
     border-bottom: solid;
-    border-color: #99cc99;
+    border-color: #5BA75B;
     border-radius: 2px;
     border-width: 4px;
     font-size: 30px;
@@ -193,18 +213,13 @@ a {
     font-size: 30px;
   }
     .contact-link:hover {
-      color: #99cc99;
+      color: #5BA75B;
     }
 
 @media screen and (max-width: 720px) {
 /* Mobile CSS */
 #intro {
 padding: 10px;
-}
-
-.project-about {
-  padding-left: 20px;
-  padding-right: 20px
 }
 
 #about {
