Replaced old site with new site file. Added images and personal projects section

--- a/style.css
+++ b/style.css
@@ -1,241 +1,123 @@
-html {
-  height: 100%;
-  width: 100%;
+/* General CSS */
+body {
+  background: #f1f1f1;
+  font-family: 'Open Sans', sans-serif;
+  margin: 0;
 }
+/* General End */
 
-body{
-  color: #4C4D57;
+/* Header */
+#header {
+  display: flex;
+  align-items: center;
+  height: 400px;
   font-family: 'Raleway', sans-serif;
-  margin: 0;
-  height: 100%;
-  width: 100%;
+  text-align: center;
+  justify-content: center;
 }
+  #header div {
+  }
+  #header h1 {
+    font-size: 6em;
+    margin: 0;
+  }
+  #header hr {
+    background: #111;
+    border: none;
+    border-radius: 2px;
+    color: #111;
+    height: 2px;
+    margin: 20px auto;
+    width: 300px;
+  }
+  #header h3 {
+    font-size: 1.5em;
+    margin: 0;
+  }
+/* Header End */
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-.green-words {
-  color: #5BA75B
-}
 
+/* Banner */
 .banner {
-  background: #5BA75B;
-  color: #121212;
-  font-size: 20px;
-  margin: 0;
-  padding: 2px;
+  background: #111; 
+  color: #f1f1f1;
+  font-family: 'Raleway', sans-serif;
   text-align: center;
+  padding: 10px;
 }
+  .banner h1 {
+    font-family: 2em;
+  }
+/* Banner End */
 
-.button {
-  border: solid;
-  border-color: #5BA75B;
-  border-radius: 2px;
-  border-width: 4px;
-  background: #5BA75B;
-  bottom: 0;
-  color: #fff;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 25px;
-  margin: 0 auto;
-  text-align: center;
-  padding: 20px;
-  margin: 10px;
+/* Portfolio */
+#portfolio {
+  display: flex;
 }
-  .button:hover {
-    background: url(images/transparentbg.png);
-    color: #5BA75B;
-    cursor: hand;
-  }
-
-
-#intro {
-  background: url(images/grass.jpeg) no-repeat center;
-  background-size: cover;
-  color: #ccc;
-  padding: 80px;
-  text-align: center;
-}
-  #intro-title {
-    font-size: 80px;
-  }
-  #intro-info {
-    font-size: 30px;
-  }
-
-
-/* Projects */
 .project {
-  color: #ccc;
-  padding-top: 40px;
-  padding-bottom: 80px;
-  text-align: center;
+  display: flex;
+  background-color: #111;
+  color: #f1f1f1;
+  flex: 1;
+  height: 400px;
+  margin: 20px;
+  overflow: hidden;
+  position: relative;
 }
-  .project-title {
-      border-bottom: solid;
-      border-color: #5BA75B;
-      border-width: 4px;
-      margin: 0 auto;
-      margin-top: 40px;
-      margin-bottom: 40px;
-      text-align: center;
-    }
-      .project-title h1{
-        font-size: 60px;
-        margin: 0;
-        text-shadow: 0px 1px 5px rgba(0, 0, 0, 1);
-      } 
-  .project-content {
-    font-family: 'Montserrat', sans-serif;
+  .project-background {
+    height: 100%;
+    position: absolute;
+    transition: 300ms;
     width: 100%;
   }
-    .project-about { 
-      font-size: 24px;
-      height: 70%;
+    .project-background:hover {
+      opacity: 0.5;
+      transition: 300ms;
     }
-      .project-about p {
-        max-width: 40em;
-        padding: 10px;
-        text-shadow: 0px 1px 5px rgba(0, 0, 0, 1);
-        margin: 0 auto;
-      }
-    .project-buttons {
-      height: 30%; 
-      margin: 20px;
-    }
-
-
-#ushare {
-  background: url(images/mapbackground.jpeg) no-repeat;
-  background-size: cover;
-}
-  #ushare-title {
-    margin: 40px auto;
-    width: 250px;
+  .project-banner {
+    background: #111;
+    bottom: 5%;
+    opacity: 0.95;
+    padding: 0;
+    position: absolute;
+    width: 100%;
   }
+    .project-banner h5 {
+      font-family: 'Raleway', sans-serif;
+      font-size: 1.15em;
+      margin: 0;
+      padding: 15px;
+    }
 
 #showstar {
-  background: url(images/party.jpeg) no-repeat center;
+  background: url(images/club.jpeg) no-repeat center;
   background-size: cover;
 }
-  #showstar-title {
-    margin: 40px auto;
-    width: 500px;
-  }
 
-#remoteme {
-  background: url(images/background-remoteme.png);
-  background-size: cover;
-}
-  #remoteme-title {
-    margin: 40px auto;
-    width: 350px;
-  }
-  
 #brooklyn {
   background: url(images/brooklyn.jpeg) no-repeat center;
   background-size: cover;
-  box-shadow: inset 0 0 10em #111;
 }
-  #brooklyn-title {
-    margin: 40px auto;
-    width: 530px;
-  }
-  #brooklyn-title h1 {
-    text-shadow: none;
-  }
-  #brooklyn-about p {
-    text-shadow: none;
-  }
+/* Portfolio End */
 
-#chromebooks {
-  background: url(images/background-linux.png) center;
+/* Projects */
+#projects {
+  display: flex;
+}
+
+#ushare {
+  background: url(images/cab.jpeg) no-repeat center;
   background-size: cover;
 }
-  #chromebooks-title {
-    margin: 40px auto;
-    width: 520px;
-  }
+
+#remoteme {
+  background: url(images/map.jpeg) no-repeat center;
+  background-size: cover;
+}
+
+#bulletjournal {
+  background: url(images/journal.jpeg) no-repeat center;
+  background-size: cover;
+}
 /* Projects End */
-
-#about {
-  background: #121212;
-  color: #ccc;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 24px;
-  padding: 220px;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  text-align: center;
-}
-  #about hr {
-    border: none;
-    border-radius: 2px;
-    background: #99c999;
-    color: #5BA75B;
-    height: 4px;
-    width: 100px;
-  }
-  #about a {
-    text-decoration: underline;
-  }
-
-
-#contact {
-  display: -webkit-flex;
-  display: flex;
-  font-size: 20px;
-  height: 400px;
-  text-align: center;
-}
-  #contact-left {
-    align: left;
-    flex: 1;
-    margin: 40px;
-  }
-  #contact-right {
-    align: right;
-    flex: 1;
-    margin: 40px;
-  }
-  .contact-header {
-    border-bottom: solid;
-    border-color: #5BA75B;
-    border-radius: 2px;
-    border-width: 4px;
-    font-size: 30px;
-    margin: 0 auto;
-    width: 140px;
-  }
-  .contact-link {
-    font-size: 30px;
-  }
-    .contact-link:hover {
-      color: #5BA75B;
-    }
-
-@media screen and (max-width: 720px) {
-/* Mobile CSS */
-#intro {
-padding: 10px;
-}
-
-#about {
-  padding: 20px;
-}
-
-#showstar-title {
-  width: 75%;
-}
-
-#brooklyn-title {
-  width: 80%;
-}
-
-#contact {
-  display: block;
-}
-/* Mobile CSS End */
-}
