--- a/style.css
+++ b/style.css
@@ -97,9 +97,15 @@ a {
   flex: 1;
   height: 400px;
   margin: 20px;
-  overflow: hidden;
   position: relative;
 }
+  .toggle {
+    display: none;
+    visibility: none;
+  }
+  .toggle:checked ~ .project-expand {
+    height: 100%;
+  }
   .project-background {
     height: 100%;
     position: absolute;
@@ -107,6 +113,7 @@ a {
     width: 100%;
   }
     .project-background:hover {
+      cursor: hand;
       opacity: 0.5;
       transition: 300ms;
     }
@@ -123,6 +130,45 @@ a {
       font-size: 1.15em;
       margin: 0;
       padding: 15px;
+    }
+  .project-expand {
+    background: #111;
+    display: flex;
+    height: 0px;
+    opacity: 0.95;
+    overflow: hidden;
+    padding: 10px;
+    position: absolute;
+    transition: height 0.5s;
+    width: 100%;
+    z-index: 20;
+  }
+    .project-expand section {
+      height: 100%;
+      text-align: center;
+      width: 100%
+    }
+    .project-expand h2 {
+      font-family: 'Raleway', sans-serif;
+      font-size: 2vw;
+      text-decoration: underline;
+    }
+    .project-expand p {
+      font-size: 1.15vw;
+      margin: 12px auto;
+    }
+    .project-expand a {
+      background: #f1f1f1;
+      border: solid;
+      border-color: #111;
+      border-radius: 4px;
+      color: #111;
+      display: inline-block;
+      font-size: 1vw;
+      margin-top: 4px;
+      padding: 8px;
+      text-decoration: none;
+      text-align: center;
     }
 
 #showstar {
