--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ a {
   #about p {
     justify-content: center;
     margin: 40px auto;
-    width: 1080px;
+    width: 80%
   }
   
 /* About End */
@@ -137,13 +137,14 @@ a {
     height: 0px;
     opacity: 0.95;
     overflow: hidden;
-    padding: 10px;
     position: absolute;
     transition: height 0.5s;
     width: 100%;
     z-index: 20;
   }
     .project-expand section {
+      display: flex;
+      flex-flow: column;
       height: 100%;
       text-align: center;
       width: 100%
@@ -155,7 +156,9 @@ a {
     }
     .project-expand p {
       font-size: 1.15vw;
-      margin: 12px auto;
+      margin: 2px auto;
+      width: 80%;
+      max-height: 100%;
     }
     .project-expand a {
       background: #f1f1f1;
@@ -202,3 +205,20 @@ a {
   background-size: cover;
 }
 /* Projects End */
+
+/* Mobile CSS */
+@media screen and (max-width: 720px) {
+#portfolio {
+  display: inline-block;
+  margin: 20px auto;
+  width: 100%;
+}
+.project {
+  height: 400px;
+  max-width: 100%;
+}
+  .project-expand p {
+    font-size: 2vw; 
+  }
+}
+/* Mobile CSS End */
