Fadein text for projects in progress

--- a/style.css
+++ b/style.css
@@ -32,10 +32,10 @@ a {
     margin: 0;
   }
   #header hr {
-    background: #111;
+    background: #222;
     border: none;
     border-radius: 2px;
-    color: #111;
+    color: #222;
     height: 2px;
     margin: 20px auto;
     width: 300px;
@@ -50,7 +50,7 @@ a {
 
 /* Banner */
 .banner {
-  background: #111; 
+  background: #222; 
   color: #f1f1f1;
   font-family: 'Raleway', sans-serif;
   text-align: center;
@@ -69,10 +69,10 @@ a {
   text-align: center;
 }
   #about hr {
-    background: #111;
+    background: #222;
     border: none;
     border-radius: 2px;
-    color: #111;
+    color: #222;
     height: 1px;
     margin: 20px auto;
     width: 300px;
@@ -92,7 +92,7 @@ a {
 }
 .project {
   display: flex;
-  background-color: #111;
+  background-color: #222;
   color: #f1f1f1;
   flex: 1;
   height: 400px;
@@ -118,7 +118,7 @@ a {
       transition: 300ms;
     }
   .project-banner {
-    background: #111;
+    background: #222;
     bottom: 5%;
     opacity: 0.95;
     padding: 0;
@@ -132,7 +132,7 @@ a {
       padding: 15px;
     }
   .project-expand {
-    background: #111;
+    background: #222;
     display: flex;
     height: 0px;
     opacity: 0.95;
@@ -146,6 +146,7 @@ a {
       display: flex;
       flex-flow: column;
       height: 100%;
+      opacity: 0;
       text-align: center;
       width: 100%
     }
@@ -163,9 +164,9 @@ a {
     .project-expand a {
       background: #f1f1f1;
       border: solid;
-      border-color: #111;
+      border-color: #222;
       border-radius: 4px;
-      color: #111;
+      color: #222;
       display: inline-block;
       font-size: 1vw;
       margin-top: 4px;
@@ -209,6 +210,11 @@ a {
 /* Mobile CSS */
 @media screen and (max-width: 720px) {
 #portfolio {
+  display: inline-block;
+  margin: 20px auto;
+  width: 100%;
+}
+#projects {
   display: inline-block;
   margin: 20px auto;
   width: 100%;
