--- a/style.css
+++ b/style.css
@@ -83,11 +83,12 @@ a {
 
 
 /* Portfolio */
-#portfolio {
+#portfolio-top {
+}
+#portfolio-bottom {
   display: flex;
 }
 .project {
-  display: flex;
   background-color: #222;
   color: #f1f1f1;
   flex: 1;
@@ -181,6 +182,17 @@ a {
   background: url(images/brooklyn.jpeg) no-repeat center;
   background-size: cover;
 }
+
+#project-armisitice {
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+  #armistice {
+    background: url(images/armistice.jpg) no-repeat center;
+    background-size: cover;
+  }
 /* Portfolio End */
 
 /* Projects */
