--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,238 +1,54 @@
-/* General CSS */
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   background: #f1f1f1;
-  font-family: 'Open Sans', sans-serif;
-  margin: 0;
+  font-family: 'Raleway', sans-serif;
+  margin: 0 auto;
+  height: 100%;
+  width: 100%;
 }
 
 a {
   color: inherit;
-  text-decoration: underline;
-}
-
-/* General End */
-
-/* Header */
-#header {
-  display: flex;
-  align-items: center;
-  height: 500px;
-  text-align: center;
-  justify-content: center;
-}
-  #header div {
-  }
-  #header h1 {
-    font-family: 'Raleway', sans-serif;
-    font-size: 6em;
-    margin: 0;
-  }
-  #header hr {
-    background: #222;
-    border: none;
-    border-radius: 2px;
-    color: #222;
-    height: 2px;
-    margin: 20px auto;
-    width: 300px;
-  }
-  #header h3 {
-    font-family: 'Raleway', sans-serif;
-    font-size: 1.5em;
-    margin: 0;
-  }
-/* Header End */
-
-
-/* Banner */
-.banner {
-  background: #222; 
-  color: #f1f1f1;
-  font-family: 'Raleway', sans-serif;
-  text-align: center;
-  padding: 10px;
-}
-  .banner h1 {
-    font-size: 1.6em;
-  }
-/* Banner End */
-
-/* About */
-#about {
-  font-family: 'Noto Sans', sans-serif;
-  font-size: 1.5em;
-  margin: 20px;
-  text-align: center;
-}
-  #about hr {
-    background: #222;
-    border: none;
-    border-radius: 2px;
-    color: #222;
-    height: 1px;
-    margin: 20px auto;
-    width: 300px;
-  }
-  #about p {
-    justify-content: center;
-    margin: 40px auto;
-    width: 80%
-  }
-  
-/* About End */
-
-
-/* Portfolio */
-#portfolio-top {
-}
-#portfolio-bottom {
-  display: flex;
-}
-.project {
-  background-color: #222;
-  color: #f1f1f1;
-  flex: 1;
-  height: 400px;
-  margin: 20px;
-  position: relative;
-}
-  .toggle {
-    display: none;
-    visibility: none;
-  }
-  .toggle:checked ~ .project-expand {
-    height: 100%;
-  }
-  .project-background {
-    height: 100%;
-    position: absolute;
-    transition: 300ms;
-    width: 100%;
-  }
-    .project-background:hover {
-      cursor: hand;
-      opacity: 0.5;
-      transition: 300ms;
-    }
-  .project-banner {
-    background: #222;
-    bottom: 5%;
-    opacity: 0.95;
-    padding: 0;
-    position: absolute;
-    width: 100%;
-  }
-    .project-banner h5 {
-      font-family: 'Raleway', sans-serif;
-      font-size: 1.15em;
-      margin: 0;
-      padding: 15px;
-    }
-  .project-expand {
-    background: #222;
-    display: flex;
-    height: 0px;
-    opacity: 0.95;
-    overflow: hidden;
-    position: absolute;
-    transition: height 0.5s;
-    width: 100%;
-    z-index: 20;
-  }
-    .project-expand section {
-      display: flex;
-      flex-flow: column;
-      height: 100%;
-      text-align: center;
-      width: 100%
-    }
-    .project-expand h2 {
-      margin: 15px;
-      font-family: 'Raleway', sans-serif;
-      font-size: 2vw;
-      text-decoration: underline;
-    }
-    .project-expand p {
-      font-family: 'Noto Sans';
-      font-size: 1.02vw;
-      margin: 2px auto;
-      width: 80%;
-      max-height: 100%;
-    }
-    .project-expand a {
-      background: #f1f1f1;
-      border: solid;
-      border-color: #222;
-      border-radius: 4px;
-      color: #222;
-      display: inline-block;
-      font-size: 1vw;
-      margin-top: 4px;
-      padding: 8px;
-      text-decoration: none;
-      text-align: center;
-    }
-
-#showstar {
-  background: url(../images/club.jpeg) no-repeat center;
-  background-size: cover;
-}
-
-#brooklyn {
-  background: url(../images/brooklyn.jpeg) no-repeat center;
-  background-size: cover;
-}
-
-#project-armisitice {
-  width: 50%;
-  margin: 0 auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-  #armistice {
-    background: url(../images/armistice.jpg) no-repeat center;
-    background-size: cover;
-  }
-/* Portfolio End */
-
-/* Projects */
-#projects {
-  display: flex;
-}
-
-#ushare {
-  background: url(../images/cab.jpeg) no-repeat center;
-  background-size: cover;
-}
-
-#remoteme {
-  background: url(../images/map.jpeg) no-repeat center;
-  background-size: cover;
-}
-
-#bulletjournal {
-  background: url(../images/journal.jpeg) no-repeat center;
-  background-size: cover;
-}
-/* Projects End */
-
-
-/* Contact */
-#contact {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  margin: 80px;
-  text-align: center;
-}
-.contact-link {
-  flex: 1;
-  font-family: 'Noto Sans', sans-serif;
-  font-size: 1.2em;
-  margin: 10px;
   text-decoration: none;
 }
-  .contact-link:hover {
-    color: #555;
+
+
+.headers {
+  margin: 40px;
+}
+.header--main {
+  font-size: 56px;
+  margin-bottom: 0;
+}
+.header--small {
+  font-size: 26px;
+}
+
+.container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+
+.links {
+}
+  .link {
+    margin: 0 15px;
+    padding-bottom: 2px;
   }
-/* Contact End */
+    .link:hover {
+      color: #222222;
+      border-bottom: solid;
+      border-width: 2px;
+    }
+    .link__img path {
+      height: 20px;
+      width: 20px;
+    }
