--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -19,6 +19,7 @@ a {
 
 .headers {
   margin: 40px;
+  text-align: center;
 }
 .header--main {
   font-size: 56px;
@@ -52,3 +53,13 @@ a {
       height: 20px;
       width: 20px;
     }
+
+@media (max-width: 37.5em)  {
+  .headers {
+    margin: 10px;
+  }
+  .link {
+    display: block;
+    margin: 4px;
+  }
+}
